--- a/WolvenKit/Views/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Documents/DocumentView.xaml
@@ -1,5 +1,5 @@
 <reactiveUi:ReactiveUserControl
-    x:TypeArguments="documents:RedDocumentViewModel"
+    x:TypeArguments="docVM:RedDocumentViewModel"
     x:Class="WolvenKit.Views.Documents.DocumentView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,29 +9,25 @@
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:templates="clr-namespace:WolvenKit.Views.Templates"
-    xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
-    xmlns:documents1="clr-namespace:WolvenKit.Views.Documents" xmlns:converters="clr-namespace:WolvenKit.Converters"
+    xmlns:docVM="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
+    xmlns:docV="clr-namespace:WolvenKit.Views.Documents" xmlns:converters="clr-namespace:WolvenKit.Converters"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance Type={x:Type documents:RedDocumentViewModel}}"
+    d:DataContext="{d:DesignInstance Type={x:Type docVM:RedDocumentViewModel}}"
     >
 
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
 
         <Grid.Resources>
             
-            <DataTemplate x:Key="MainTemplate">
-                <documents1:W2rcMainFileView/>
+            <DataTemplate DataType="{x:Type docVM:W2rcFileViewModel}">
+                <docV:W2rcMainFileView/>
             </DataTemplate>
 
-            <DataTemplate x:Key="BufferTemplate">
-                <documents1:W2rcMainFileView/>
+            <DataTemplate DataType="{x:Type docVM:TextureViewModel}">
+                <docV:TextureView/>
             </DataTemplate>
-
-            <converters:RedDocumentTemplateSelector x:Key="RedDocumentTemplateSelector"
-                                                   MainTemplate="{StaticResource MainTemplate}"
-                                                   BufferTemplate="{StaticResource BufferTemplate}" />
 
         </Grid.Resources>
 
@@ -40,7 +36,6 @@
             ItemsSource="{Binding TabItemViewModels, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
             SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             SelectedItem="{Binding SelectedTabItemViewModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            ContentTemplateSelector="{StaticResource RedDocumentTemplateSelector}"
             CloseButtonType="Hide"
             ShowTabItemContextMenu="False"
             EnableLabelEdit="False"
@@ -50,6 +45,11 @@
             Padding="0"
             Style="{StaticResource WolvenKitTabControl}"
             TabPanelBackground="#313131">
+            <syncfusion:TabControlExt.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Header}"/>
+                </DataTemplate>
+            </syncfusion:TabControlExt.ItemTemplate>
         </syncfusion:TabControlExt>
         
        
