--- a/WolvenKit/Views/Documents/W2rcMainFileView.xaml
+++ b/WolvenKit/Views/Documents/W2rcMainFileView.xaml
@@ -19,7 +19,8 @@
     xmlns:archive="clr-namespace:WolvenKit.RED4.Archive.CR2W;assembly=WolvenKit.RED4.Archive"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance Type={x:Type documents:W2rcFileViewModel}}"  BorderThickness="1,0,1,1"
+    d:DataContext="{d:DesignInstance Type={x:Type documents:W2rcFileViewModel}}"
+    BorderThickness="1,0,1,1"
     BorderBrush="{StaticResource BorderAlt}"
     Margin="0">
     
@@ -538,64 +539,6 @@
                 </ContextMenu>
             </syncfusion:SfImageEditor.ContextMenu>
         </syncfusion:SfImageEditor-->
-
-        <Border
-            BorderThickness="1"
-            Padding="0"
-            Grid.Column="0"
-            ClipToBounds="True"
-            Grid.ColumnSpan="3"
-            Background="{StaticResource ContentBackground}"
-            Visibility="{Binding IsImagePreviewVisible, Converter={StaticResource boolToVisibilityConverter}}">
-            <Border.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="Real Image Size" Click="SetRealPixelZoom" />
-                    <MenuItem Header="Reset Zoom/Pan" Click="ResetZoomPan" />
-                </ContextMenu>
-            </Border.ContextMenu>
-            <Border
-                BorderThickness="1"
-                x:Name="ImagePreviewCanvas"
-                ClipToBounds="True"
-                Background="{StaticResource ContentBackground}">
-                <Canvas x:Name="ImagePreview" IsHitTestVisible="False"
-                        RenderTransformOrigin="0.5,0.5" Background="Transparent">
-                    <Image
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch"
-                        ClipToBounds="False"
-                        Source="{Binding Image}"
-                        RenderTransformOrigin="0.5,0.5"
-                        Opacity="1">
-                        <Image.RenderTransform>
-                            <ScaleTransform ScaleY="-1"/>
-                        </Image.RenderTransform>
-                    </Image>
-                    <ItemsControl ItemsSource="{Binding OverlayItems}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <Canvas/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemContainerStyle>
-                            <Style TargetType="ContentPresenter">
-                                <Setter Property="Canvas.Left" Value="{Binding Left}"/>
-                                <Setter Property="Canvas.Top" Value="{Binding Top}"/>
-                                <Setter Property="Width" Value="{Binding Width}"/>
-                                <Setter Property="Height" Value="{Binding Height}"/>
-                            </Style>
-                        </ItemsControl.ItemContainerStyle>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Border Canvas.Left="{Binding Left}" BorderThickness="1" BorderBrush="{StaticResource WolvenKitCyan50}">
-                                    <TextBlock Text="{Binding Name}" FontSize="8" VerticalAlignment="Bottom" HorizontalAlignment="Left" Foreground="{StaticResource WolvenKitCyan50}"/>
-                                </Border>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </Canvas>
-            </Border>
-        </Border>
 
     </Grid>
     
