refactor reddocument v/vm, adds physicalscene to mesh preview

--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -44,7 +44,7 @@
 
                     <DataTemplate DataType="{x:Type docvm:RedDocumentViewModel}">
                         <Grid>
-                            <documents:DocumentView />
+                            <documents:RedDocumentView />
                         </Grid>
                     </DataTemplate>
                     <DataTemplate DataType="{x:Type docvm:TweakDocumentViewModel}">
