--- a/WolvenKit/Views/Documents/RDTDataView.xaml
+++ b/WolvenKit/Views/Documents/RDTDataView.xaml
@@ -1,6 +1,6 @@
 <reactiveUi:ReactiveUserControl
-    x:TypeArguments="documents:W2rcFileViewModel"
-    x:Class="WolvenKit.Views.Documents.W2rcMainFileView"
+    x:TypeArguments="documents:RDTDataViewModel"
+    x:Class="WolvenKit.Views.Documents.RDTDataView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:reactiveUi="http://reactiveui.net"
@@ -19,7 +19,7 @@
     xmlns:archive="clr-namespace:WolvenKit.RED4.Archive.CR2W;assembly=WolvenKit.RED4.Archive"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance Type={x:Type documents:W2rcFileViewModel}}"
+    d:DataContext="{d:DesignInstance Type={x:Type documents:RDTDataViewModel}}"
     BorderThickness="1,0,1,1"
     BorderBrush="{StaticResource BorderAlt}"
     Margin="0">
@@ -119,7 +119,7 @@
                         </Grid.Resources>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <TextBlock Width="Auto" Text="{Binding Name}"  Margin="0,0,0,2" Grid.Column="1"/>
                         <TextBlock Width="Auto" Text="{Binding Type, StringFormat=' {0}'}"  Margin="0,0,0,2" Grid.Column="2"
@@ -147,13 +147,13 @@
                         </Grid.Resources>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="20" />
-                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <iconPacks:PackIconCodicons Kind="{Binding Extension}" Height="15"
                             Width="15" VerticalAlignment="Center" HorizontalAlignment="Center"  Margin="0,0,6,0" />
-                        <TextBlock Name="PropertyValue" Style="{StaticResource PropertyValueStyle}" Margin="0,0,0,2" Grid.Column="1"/>
+                        <TextBlock Name="PropertyValue" Style="{StaticResource PropertyValueStyle}" Margin="0,0,0,2" Grid.Column="1" TextTrimming="CharacterEllipsis"/>
                         <ToggleButton x:Name="DeleteButton" HorizontalAlignment="Left" IsChecked="{Binding IsDeleteReady}"
                                     Style="{StaticResource DeleteButtonStyle}" Grid.Column="2"
                                     Margin="5,-4,0,-2" Padding="0"
@@ -312,19 +312,18 @@
                             <Grid ToolTip="{Binding Type}" Tag="{Binding}" Background="Transparent" ContextMenu="{StaticResource TreeViewContextMenu}">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Style="{StaticResource ArrayNameColumnWidth}" />
-                                    <!--ColumnDefinition Width="20" /-->
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" MinWidth="20"/>
                                 </Grid.ColumnDefinitions>
-                                <ContentPresenter Grid.Column="0" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                                <ContentPresenter Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Center"
                                    ContentTemplate="{StaticResource PropertyNameTemplate}"/>
                                 <!--iconPacks:PackIconCodicons Kind="References" Height="14" Grid.Column="1"
                                     Width="14" VerticalAlignment="Center" HorizontalAlignment="Center"  Margin="0,0,6,0" />
                                 <TextBlock Text="{Binding Value}" Grid.Column="2" /-->
-                                <ContentPresenter Grid.Column="1" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                                <ContentPresenter Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center"
                                    ContentTemplate="{StaticResource PropertyValueTemplate}"  />
-                                <Button Grid.Column="3" Margin="5,0,0,0" Style="{StaticResource ButtonCustom}" Command="{Binding OpenRefCommand}">
-                                    <iconPacks:PackIconVaadinIcons Kind="ArrowCircleRight"
+                                <Button Grid.Column="2" Margin="5,0,0,0" Style="{StaticResource ButtonCustom}" Command="{Binding OpenRefCommand}" ToolTip="Open in new tab">
+                                    <iconPacks:PackIconVaadinIcons Kind="ArrowBackward" RotationAngle="90"
                                         VerticalAlignment="Center" Padding="2"/>
                                 </Button>
                             </Grid>
