--- a/WolvenKit/Views/Documents/RDTTextureView.xaml
+++ b/WolvenKit/Views/Documents/RDTTextureView.xaml
@@ -1,6 +1,6 @@
 <reactiveUi:ReactiveUserControl
-    x:TypeArguments="documents:TextureViewModel"
-    x:Class="WolvenKit.Views.Documents.TextureView"
+    x:TypeArguments="documents:RDTTextureViewModel"
+    x:Class="WolvenKit.Views.Documents.RDTTextureView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:reactiveUi="http://reactiveui.net"
@@ -9,7 +9,7 @@
     xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App" xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance Type={x:Type documents:TextureViewModel}}"
+    d:DataContext="{d:DesignInstance Type={x:Type documents:RDTTextureViewModel}}"
     BorderThickness="1,0,1,1"
     BorderBrush="{StaticResource BorderAlt}"
     Margin="0">
@@ -55,9 +55,8 @@
         ClipToBounds="True"
         Background="{StaticResource ContentBackground}">
             <Border.ContextMenu>
-            <ContextMenu>
-                <MenuItem Header="Real Image Size" Click="SetRealPixelZoom" />
-                <MenuItem Header="Reset Zoom/Pan" Click="ResetZoomPan" />
+                <ContextMenu>
+                    <MenuItem Header="Reset Zoom/Pan" Click="ResetZoomPan" />
             </ContextMenu>
         </Border.ContextMenu>
         <Border
