--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -100,7 +100,7 @@
     <!--ResizeBorderBrush="#1f1f1f"-->
 
     <Grid Margin="0,-32,0,0">
-        <Border Margin="-6,-4,-6,-8">
+        <Border Margin="-6,-4,-6,-8" IsHitTestVisible="False">
             <Grid>
                 <Rectangle Stroke="Black" Margin="7" RadiusX="8" RadiusY="8" Opacity="0.25"/>
                 <Rectangle Stroke="Black" Margin="6" RadiusX="9" RadiusY="9" Opacity="0.2"/>
@@ -259,6 +259,6 @@
              />
 
         </Grid>
-        <Border Name="WindowBorder" BorderBrush="{StaticResource ContentBackgroundAlt4}" BorderThickness="1" />
+        <Border IsHitTestVisible="False" Name="WindowBorder" BorderBrush="{StaticResource ContentBackgroundAlt4}" BorderThickness="1" />
     </Grid>
 </syncfusion:ChromelessWindow>
